# version 4.2.2

- Minor update for CRAN compatibility.

# version 4.2.1

- Fixed I/O bugs.

# version 4.2

- Made conversion of list of layers, actors, and vertices from C++ to R more efficient.

- Added resolution parameter and weights to generalised Louvain.

- Small updates to documentation.

- Updated layer degree correlation: the correlation is now computed on the degree, not the number of neighbours. That is, if a vertex V has two incident edges V -> U and V <- U, its degree with mode INOUT is 2 (it was previously 1, as the neighbour is the same).

- Updated clique percolation: fixed a missing duplicate check (potentially leading to redundant sub-communities being returned) and now automatically discarding directionality if executed on a directed graph.

# version 4.1.2

- Small fix for CRAN compatibility

# version 4.1.1

- Fixed a comment for CRAN compatibility

# version 4.1

- New license (Apache 2.0)
- Fixed bug in summary function
- Get_values_ml() returns the name of the attribute (instead of "value" as the name of the column with the values)
- Get_values_ml() and set_values_ml() require a DataFrame also for actors

# version 4.0.1

- Rewritten as.igraph to remove dependency on igraph's ability to read graphml files
- Modified is_directed_ml not to process pairs of layers that have not been initialised (it used to return a warning)

# version 4.0

- The multilayer network data structure has been re-implemented using multilayer cubes
- Actors must exist on at least one layer
- Removed actor Pucci from florentine data, not being present in any layer
- Improved efficiency of functions returning dataframes
- Removed functions deprecated since versions 3.0 and 3.1

# version 3.3.2

- New default behavior: loops are allowed
- Added generate_communities_ml, to create simple community structures
- Added flat_ec_ml, flat_nw_ml and mdlp_ml clustering algorithms
- Added nmi_ml and omega_index_ml evaluation functions

# version 3.3.1
