@@ -3171,17 +3171,18 @@ abacus_ml(
 {
     auto mnet = rmnet.get_mlnet();
 
-    try
-    {
-        auto com_struct = uu::net::abacus(mnet, min_actors, min_layers);
-        return to_dataframe(com_struct.get());
-    }
+    //try
+    //{
+    //    auto com_struct = uu::net::abacus(mnet, min_actors, min_layers);
+    //    return to_dataframe(com_struct.get());
+    //}
 
-    catch (std::exception& e)
-    {
-        Rcout << "Warning: could not run external library: " << e.what() << std::endl;
+    //catch (std::exception& e)
+    //{
+        Rcout << "Warning: could not run external library: eclat" //<< e.what()
+    << std::endl;
         Rcout << "Returning empty community set." << std::endl;
-    }
+    //}
 
     auto com_struct = std::make_unique<uu::net::CommunityStructure<uu::net::MultilayerNetwork>>();
     return to_dataframe(com_struct.get());
